--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>新北教育問答拉霸機</title>
+  <title>新北市教育資出題機</title>
 
   <!-- NES.css -->
   <link rel="stylesheet" href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css">
@@ -24,7 +24,7 @@
     <header class="hero text-white">
       <div class="app-container flex items-center gap-3 py-5 md:py-6">
         <i class="nes-icon trophy is-medium"></i>
-        <h1 class="text-xl md:text-2xl font-extrabold tracking-wide">新北教育問答拉霸機</h1>
+        <h1 class="text-xl md:text-2xl font-extrabold tracking-wide">新北市教育資出題機</h1>
       </div>
     </header>
 
@@ -51,7 +51,7 @@
           </article>
 
           <article class="slot-box">
-            <div class="slot-title">指定數據</div>
+            <div class="slot-title">查詢數據</div>
             <div id="data-text" class="slot-text">
               <span class="slot-lines">?</span>
             </div>
