--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>新北市教育資出題機</title>
+  <title>新北市教育資料出題機</title>
 
   <!-- NES.css -->
   <link rel="stylesheet" href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css">
@@ -24,7 +24,7 @@
     <header class="hero text-white">
       <div class="app-container flex items-center gap-3 py-5 md:py-6">
         <i class="nes-icon trophy is-medium"></i>
-        <h1 class="text-xl md:text-2xl font-extrabold tracking-wide">新北市教育資出題機</h1>
+        <h1 class="text-xl md:text-2xl font-extrabold tracking-wide">新北市教育資料出題機</h1>
       </div>
     </header>
 
